corrected body-class width (was causing a horizontal scrollbar)

--- a/assets/themes/the-program/css/style.css
+++ b/assets/themes/the-program/css/style.css
@@ -1067,7 +1067,7 @@ pre {
     -moz-box-shadow: #ffffff 0px 0px 2px;
     -o-box-shadow: #ffffff 0px 0px 2px;
     float: left;
-    width: 81%;
+    width: 80%;
     margin-right: -450px;
   }
   .body .unit-body {
